--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "material-ui": "^0.20.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-material-ui-form-validator": "^2.1.4",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "web-vitals": "^1.0.1"
