--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.6.3",
     "material-ui": "^0.20.2",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-material-ui-form-validator": "^2.1.4",
     "react-scripts": "4.0.3",
