--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "clsx": "^1.1.1",
     "firebase": "^8.6.3",
     "material-ui": "^0.20.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-big-calendar-like-google": "^0.0.3",
     "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-material-ui-form-validator": "^2.1.4",
