--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cal-parser": "^1.0.1",
     "clsx": "^1.1.1",
     "firebase": "^8.6.3",
+    "ical": "^0.8.0",
     "material-ui": "^0.20.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -22,7 +23,7 @@
     "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-material-ui-form-validator": "^2.1.4",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-toastify": "^7.0.4",
     "web-vitals": "^1.0.1"
   },
